--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Your code here! -->
     <link rel="stylesheet" href="./style.css">
   </head>
-<body style="#00b3e6:add"
+<body style="#00b3e6:add_color"
   <body>
 
     <div>
