--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- Your code here! -->
     <link rel="stylesheet" href="./style.css">
   </head>
-<body style="#00b3e6:add_color"
-  <body>
+<body style="#00b3e6:add_color">
+  
 
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
