--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <!-- Your code here! -->
     <link rel="stylesheet" href="./style.css">
   </head>
-<body style="#00b3e6:add_color">
+<body style="background-color:#00b3e6">
   
-
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
